--- a/src/app/pages/processing-page/components/work/work.component.html
+++ b/src/app/pages/processing-page/components/work/work.component.html
@@ -77,7 +77,7 @@
           Должность в компании
           <input
             type="text"
-            formControlName="company_position"
+            formControlName="employee_position"
             class="form-group__item--input"
         /></label>
       </fieldset>
@@ -87,7 +87,7 @@
           Тип должности
           <input
             type="text"
-            formControlName="type_position"
+            formControlName="type_employee_position"
             class="form-group__item--input"
         /></label>
       </fieldset>
