--- a/src/app/auth/user-filter-page/components/clients-list/clients-list.component.html
+++ b/src/app/auth/user-filter-page/components/clients-list/clients-list.component.html
@@ -1,62 +1,65 @@
 <div class="client-list-container">
   <app-clients-list-header></app-clients-list-header>
 
-  <div *ngIf="allClints$ | async as clients">
+  <div *ngIf="dataSource">
     <table
       mat-table
-      [dataSource]="clients"
+      [dataSource]="dataSource"
       class="clients-table mat-elevation-z8"
       matSort
+      (matSortChange)="announceSortChange($event)"
     >
       <ng-container matColumnDef="ФИО">
-        <th mat-header-cell *matHeaderCellDef>ФИО</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>ФИО</th>
         <td mat-cell *matCellDef="let element">
           {{ element.first_name }} {{ element.last_name }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="Марка авто">
-        <th mat-header-cell *matHeaderCellDef>Марка авто</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Марка авто</th>
         <td mat-cell *matCellDef="let element">{{ element.position }}</td>
       </ng-container>
 
       <ng-container matColumnDef="модель">
-        <th mat-header-cell *matHeaderCellDef>модель</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>модель</th>
         <td mat-cell *matCellDef="let element">{{ element.position }}</td>
       </ng-container>
 
       <ng-container matColumnDef="vin">
-        <th mat-header-cell *matHeaderCellDef>vin</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>vin</th>
         <td mat-cell *matCellDef="let element">{{ element.position }}</td>
       </ng-container>
 
       <ng-container matColumnDef="КАСКО">
-        <th mat-header-cell *matHeaderCellDef>КАСКО</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>КАСКО</th>
         <td mat-cell *matCellDef="let element">{{ element.position }}</td>
       </ng-container>
 
       <ng-container matColumnDef="ОСАГО">
-        <th mat-header-cell *matHeaderCellDef>ОСАГО</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>ОСАГО</th>
         <td mat-cell *matCellDef="let element">{{ element.position }}</td>
       </ng-container>
 
       <ng-container matColumnDef="кредитные продукты">
-        <th mat-header-cell *matHeaderCellDef>кредитные продукты</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          кредитные продукты
+        </th>
         <td mat-cell *matCellDef="let element">{{ element.position }}</td>
       </ng-container>
 
       <ng-container matColumnDef="Телефон">
-        <th mat-header-cell *matHeaderCellDef>Телефон</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Телефон</th>
         <td mat-cell *matCellDef="let element">{{ element.phone }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-
     <mat-paginator
-      [pageSizeOptions]="[5, 10, 25, 100]"
-      aria-label="Select page of users"
+      #paginator
+      [showFirstLastButtons]="true"
+      [pageSizeOptions]="[5, 10, 15]"
     ></mat-paginator>
   </div>
 </div>
