set client's filter

--- a/src/app/shared/components/filter-input/filter-input.component.html
+++ b/src/app/shared/components/filter-input/filter-input.component.html
@@ -9,5 +9,6 @@
     class="form-group__item--input"
     placeholder="Поиск"
     formControlName="searchFormInput"
+    (change)="onSearchValue($event)"
   />
 </form>
