set filters, added content drivers page

--- a/src/app/auth/user-filter-page/components/add-user-modal/add-user-modal.component.html
+++ b/src/app/auth/user-filter-page/components/add-user-modal/add-user-modal.component.html
@@ -72,7 +72,7 @@
         />
       </fieldset>
 
-      <fieldset class="form-group__item--options">
+      <!-- <fieldset class="form-group__item--options">
         <input
           type="checkbox"
           class="form-group__item checkbox"
@@ -141,7 +141,7 @@
             <option value="У родителей">Холост</option>
           </select></label
         >
-      </fieldset>
+      </fieldset> -->
     </form>
   </main>
   <footer class="modal-buttons">
