create dnd template

--- a/src/app/auth/user-filter-page/components/clients-list/clients-list.component.html
+++ b/src/app/auth/user-filter-page/components/clients-list/clients-list.component.html
@@ -68,6 +68,7 @@
       ></tr>
     </table>
 
+    <!-- <app-table-paginator></app-table-paginator> -->
     <mat-paginator
       #paginator
       [showFirstLastButtons]="true"
