--- a/src/app/pages/main-form-content/main-form-content-page.component.html
+++ b/src/app/pages/main-form-content/main-form-content-page.component.html
@@ -15,7 +15,7 @@
   </nav>
   <main class="main-container">
     <app-side-bar
-      [steps]="calculationSteps"
+      [steps]="navigationSteps"
       *ngIf="routerLink != '/main-page/documents-payments'"
     ></app-side-bar>
     <router-outlet></router-outlet>
