--- a/src/app/pages/processing-page/components/user-info/user-info.component.scss
+++ b/src/app/pages/processing-page/components/user-info/user-info.component.scss
@@ -10,6 +10,12 @@
     display: flex;
     flex-direction: column;
 
+    .dnd__container {
+      display: flex;
+      gap: 10px;
+      margin-top: 16px;
+    }
+
     .family__form-group,
     .residential-address__form-group,
     .passport__form-group {
