set filter params

--- a/src/app/auth/user-filter-page/components/filter/filter.component.html
+++ b/src/app/auth/user-filter-page/components/filter/filter.component.html
@@ -6,7 +6,7 @@
   <form class="filter-body" [formGroup]="filterForm">
     <app-filter-input></app-filter-input>
 
-    <fieldset class="filter-options">
+    <!-- <fieldset class="filter-options">
       <input
         type="checkbox"
         class="filter-options__checkbox"
@@ -16,7 +16,7 @@
       <label for="checkbox" class="filter-options__label">
         Отображать всех клиентов
       </label>
-    </fieldset>
+    </fieldset> -->
 
     <fieldset class="form-group__item">
       <label class="form-group__item--label">
@@ -28,8 +28,8 @@
           name="property_status
       "
         >
-          <option value="Не женат, не замужем">Не женат, не замужем</option>
-          <option value="У родителей">Холост</option>
+          <option value="Не женат, не замужем">Hyundai</option>
+          <option value="У родителей">KIA</option>
         </select></label
       >
     </fieldset>
@@ -44,13 +44,13 @@
           name="property_status
       "
         >
-          <option value="Не женат, не замужем">Не женат, не замужем</option>
-          <option value="У родителей">Холост</option>
+          <option value="Не женат, не замужем">Solaris</option>
+          <option value="У родителей">RIO</option>
         </select></label
       >
     </fieldset>
 
-    <fieldset class="form-group__item">
+    <!-- <fieldset class="form-group__item">
       <label class="form-group__item--label">
         Номер телефона
         <select
@@ -64,7 +64,7 @@
           <option value="У родителей">Холост</option>
         </select></label
       >
-    </fieldset>
+    </fieldset> -->
 
     <fieldset class="filter-options">
       <input
