--- a/src/app/pages/main-form-content/main-form-content-page.component.scss
+++ b/src/app/pages/main-form-content/main-form-content-page.component.scss
@@ -60,12 +60,12 @@
 }
 
 ::ng-deep .active {
-  // font-weight: 400 !important;
-  // font-size: 16px !important;
-  // line-height: 21px !important;
-  // align-items: center !important;
-  // color: #343e48 !important;
-  // border-bottom: 1.5px solid #343e48 !important;
+  font-weight: 400 !important;
+  font-size: 16px !important;
+  line-height: 21px !important;
+  align-items: center !important;
+  color: #343e48 !important;
+  border-bottom: 1.5px solid #343e48 !important;
 }
 
 .mat-tab-nav-bar,
