set car mark filter

--- a/src/app/auth/user-filter-page/components/filter/filter.component.html
+++ b/src/app/auth/user-filter-page/components/filter/filter.component.html
@@ -25,9 +25,7 @@
           (change)="changeModel($event)"
           formControlName="car_model"
           class="form-group__item--select"
-          name="property_status
-      "
-        >
+          name="property_status">
           <option value="Solaris">Solaris</option>
           <option value="RIO">RIO</option>
         </select></label
