--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,5 +46,9 @@ body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
+.mat-dialog-container {
+  border-radius: 20px !important;
+}
 // /* Importing Bootstrap SCSS file. */
 // @import 'bootstrap/scss/bootstrap';
