--- a/src/app/auth/user-filter-page/components/add-user-modal/add-user-modal.component.html
+++ b/src/app/auth/user-filter-page/components/add-user-modal/add-user-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-container">
-  <app-modal-header [title]="modalTitle"></app-modal-header>
+  <tes-modal-header [title]="modalTitle"></tes-modal-header>
   <main class="modal-body">
     <mat-tab-group
       [disableRipple]="true"
