--- a/src/app/auth/broker-auth-page/components/broker-auth-page/broker-auth-page.component.html
+++ b/src/app/auth/broker-auth-page/components/broker-auth-page/broker-auth-page.component.html
@@ -12,7 +12,7 @@
         </p>
       </div>
 
-      <app-broker-auth-tabs> </app-broker-auth-tabs>
+      <tes-broker-auth-tabs> </tes-broker-auth-tabs>
     </div>
 
     <!-- <p class="">
