--- a/src/app/auth/broker-auth-page/components/broker-auth-tabs/broker-auth-tabs.component.html
+++ b/src/app/auth/broker-auth-page/components/broker-auth-tabs/broker-auth-tabs.component.html
@@ -12,7 +12,7 @@
       />
       <span class="tab-item__text">Email</span>
     </ng-template>
-    <app-auth-email-form></app-auth-email-form>
+    <tes-auth-email-form></tes-auth-email-form>
   </mat-tab>
   <mat-tab>
     <ng-template mat-tab-label class="tab-item">
@@ -23,6 +23,6 @@
       />
       <span class="tab-item__text">По ID-дилера</span>
     </ng-template>
-    <app-auth-broker-id-form></app-auth-broker-id-form>
+    <tes-auth-broker-id-form></tes-auth-broker-id-form>
   </mat-tab>
 </mat-tab-group>
