--- a/src/app/auth/user-filter-page/components/clients-list/clients-list.component.html
+++ b/src/app/auth/user-filter-page/components/clients-list/clients-list.component.html
@@ -1,5 +1,5 @@
 <div class="client-list-container">
-  <app-clients-list-header></app-clients-list-header>
+  <tes-clients-list-header></tes-clients-list-header>
 
   <div class="table-container">
     <table
@@ -68,7 +68,7 @@
       ></tr>
     </table>
 
-    <!-- <app-table-paginator></app-table-paginator> -->
+    <!-- <tes-table-paginator></tes-table-paginator> -->
     <mat-paginator
       #paginator
       [showFirstLastButtons]="true"
