--- a/src/app/auth/user-filter-page/user-filter-page.component.html
+++ b/src/app/auth/user-filter-page/user-filter-page.component.html
@@ -1,11 +1,11 @@
 <main class="user-filter-page">
   <div class="container">
     <aside class="header user-filter-page__header">
-      <app-filter></app-filter>
+      <tes-filter></tes-filter>
     </aside>
 
     <section class="footer user-filter-page__footer">
-      <app-clients-list></app-clients-list>
+      <tes-clients-list></tes-clients-list>
     </section>
   </div>
 </main>
