--- a/src/app/pages/calculation-loan-page/components/insurenses-params/insurenses-params.component.html
+++ b/src/app/pages/calculation-loan-page/components/insurenses-params/insurenses-params.component.html
@@ -125,11 +125,11 @@
       </div>
     </div>
 
-    <app-submit-form-button
+    <tes-submit-form-button
       [formValues]="formInsuranceOptions.value"
       [isDisable]="!formInsuranceOptions.valid"
       buttonText="Рассчитать"
-    ></app-submit-form-button>
+    ></tes-submit-form-button>
 
     <!-- <button type="submit" class="insurance-terms-personal-button">
       Рассчитать
