--- a/src/app/pages/calculation-loan-page/components/product-calculation/product-calculation-page.component.html
+++ b/src/app/pages/calculation-loan-page/components/product-calculation/product-calculation-page.component.html
@@ -1,2 +1,2 @@
-<app-product-calculation-table [data]='data'></app-product-calculation-table>
-<button (click)='openCalculateDialog()'>open dialog</button>
+<tes-product-calculation-table [data]="data"></tes-product-calculation-table>
+<button (click)="openCalculateDialog()">open dialog</button>
