--- a/src/app/pages/processing-page/components/approval/approval.component.html
+++ b/src/app/pages/processing-page/components/approval/approval.component.html
@@ -36,7 +36,7 @@
       </p>
 
       <div class="loan-footer">
-        <app-loan-params></app-loan-params>
+        <tes-loan-params></tes-loan-params>
       </div>
     </div>
 
@@ -56,5 +56,5 @@
 
     <!-- CREATE CUSTOM COMPONENT FROM THIS!  -->
   </div>
-  <app-application-form></app-application-form>
+  <tes-application-form></tes-application-form>
 </div>
