--- a/src/app/shared/components/application-form/application-form.component.html
+++ b/src/app/shared/components/application-form/application-form.component.html
@@ -12,7 +12,7 @@
     </header>
     <div class="form-body">
       <span class="form-body__title">Кредит</span>
-      <app-loan-params></app-loan-params>
+      <tes-loan-params></tes-loan-params>
     </div>
     <footer class="form-footer">
       <span class="form-footer__title">Страховые продукты</span>
