--- a/src/app/pages/documents-payments-page/documents-payments-page.component.html
+++ b/src/app/pages/documents-payments-page/documents-payments-page.component.html
@@ -1,9 +1,9 @@
 <div class="documents-payments container">
   <span class="documents-payments__title">Документы</span>
-  <app-documents
+  <tes-documents
     [document]="document"
     *ngFor="let document of currentDocuments; let i = index"
-  ></app-documents>
+  ></tes-documents>
   <div class="documents-payments__buttons">
     <button class="documents-payments__buttons--print">
       Распечатать документы
