--- a/src/app/pages/processing-page/components/summary/summary.component.html
+++ b/src/app/pages/processing-page/components/summary/summary.component.html
@@ -29,9 +29,9 @@
       </p>
 
       <div class="loan-footer">
-        <app-loan-params></app-loan-params>
+        <tes-loan-params></tes-loan-params>
       </div>
     </div>
   </div>
-  <app-application-form></app-application-form>
+  <tes-application-form></tes-application-form>
 </div>
