--- a/src/app/pages/processing-page/components/user-info/user-info.component.html
+++ b/src/app/pages/processing-page/components/user-info/user-info.component.html
@@ -187,9 +187,9 @@
         <fieldset class="form-group__item">
           <label class="form-group__item--label">
             Дети
-            <app-counter-button
+            <tes-counter-button
               (currentCountValue)="addChildren($event)"
-            ></app-counter-button
+            ></tes-counter-button
           ></label>
         </fieldset>
       </div>
@@ -201,28 +201,28 @@
         <fieldset class="form-group__item">
           <label class="form-group__item--label">
             Обязательные платежи*, ₽
-            <app-input-slider
+            <tes-input-slider
               (componentValue)="obligatoryPayments($event)"
-            ></app-input-slider>
+            ></tes-input-slider>
           </label>
         </fieldset>
 
         <fieldset class="form-group__item">
           <label class="form-group__item--label">
             Погашение кредитов*, ₽
-            <app-input-slider
+            <tes-input-slider
               (componentValue)="loanRepayment($event)"
-            ></app-input-slider
+            ></tes-input-slider
           ></label>
         </fieldset>
       </div>
     </div>
 
-    <app-submit-form-button
+    <tes-submit-form-button
       [formValues]="userInfoForm.value"
       [isDisable]="!userInfoForm.valid"
       buttonText="Продолжить"
-    ></app-submit-form-button>
+    ></tes-submit-form-button>
   </form>
 
   <!-- <button (click)="openInsuranceModal()">Open modal</button> -->
