--- a/src/app/pages/calculation-loan-page/components/product-calculation/dialogs/insurance-policy-calculation-dialog/insurance-policy-calculation-dialog.component.scss
+++ b/src/app/pages/calculation-loan-page/components/product-calculation/dialogs/insurance-policy-calculation-dialog/insurance-policy-calculation-dialog.component.scss
@@ -21,3 +21,13 @@
     color: #ffffff;
   }
 }
+
+::ng-deep {
+  .mat-dialog-container {
+    overflow: hidden;
+  }
+
+  .mat-dialog-actions {
+    margin-bottom: 0;
+  }
+}
