--- a/src/app/auth/user-filter-page/components/add-user-modal/add-user-modal.component.html
+++ b/src/app/auth/user-filter-page/components/add-user-modal/add-user-modal.component.html
@@ -117,6 +117,9 @@
             class="modal-buttons__save"
             type="button"
             value="Изменить данные клиента"
+            mat-dialog-close
+            [disabled]="!edditClientForm.valid"
+            mat-button
             (click)="sendClientData(edditClientForm)"
           />
         </form>
