some fixes for add-user-modal

--- a/src/app/auth/broker-auth-page/components/broker-auth-tabs/broker-auth-tabs.component.html
+++ b/src/app/auth/broker-auth-page/components/broker-auth-tabs/broker-auth-tabs.component.html
@@ -2,6 +2,7 @@
   [disableRipple]="true"
   mat-align-tabs="center"
   (selectedTabChange)="onTabChange($event)"
+  class="mat-tabs-broker"
 >
   <mat-tab>
     <ng-template mat-tab-label class="tab-item">
