--- a/src/assets/styles/_material.scss
+++ b/src/assets/styles/_material.scss
@@ -1,21 +1,39 @@
 /* Styles for tab */
-.mat-ink-bar {
-  background-color: white !important;
+.mat-tabs-broker {
+  .mat-ink-bar {
+    background-color: white !important;
+  }
+
+  .mat-tab-label {
+    color: #f2f4f7;
+    width: 100%;
+  }
+
+  .mat-tab-label-active {
+    color: #ffffff;
+  }
+}
+
+.mat-tab-client-modal {
+  .mat-ink-bar {
+    background-color: grey !important;
+  }
+
+  // .mat-tab-label {
+  //   color: #f2f4f7;
+  //   width: 100%;
+  // }
+
+  // .mat-tab-label-active {
+  //   color: #ffffff;
+  // }
 }
 
 .mat-tab-label,
 .mat-tab-label-active {
-  margin: 0 auto !important;
+  margin: 0 auto;
 }
 
-.mat-tab-label {
-  color: #f2f4f7 !important;
-  width: 100%;
-}
-
-.mat-tab-label-active {
-  color: #ffffff !important;
-}
 /* Styles for tab */
 
 // ========================================
