--- a/src/app/auth/user-filter-page/components/clients-list/clients-list.component.html
+++ b/src/app/auth/user-filter-page/components/clients-list/clients-list.component.html
@@ -21,24 +21,24 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header="Марка авто">
           Марка авто
         </th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.car_mark }}</td>
       </ng-container>
 
       <ng-container matColumnDef="модель">
         <th mat-header-cell *matHeaderCellDef mat-sort-header="модель">
           модель
         </th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.car_model }}</td>
       </ng-container>
 
       <ng-container matColumnDef="vin">
         <th mat-header-cell *matHeaderCellDef mat-sort-header="vin">vin</th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.vin }}</td>
       </ng-container>
 
       <ng-container matColumnDef="КАСКО">
         <th mat-header-cell *matHeaderCellDef mat-sort-header="КАСКО">КАСКО</th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.pts }}</td>
       </ng-container>
 
       <ng-container matColumnDef="ОСАГО">
@@ -50,7 +50,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header="КРЕДИТ">
           кредитные продукты
         </th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.transmission }}</td>
       </ng-container>
 
       <ng-container matColumnDef="Телефон">
